--- a/php/src/composer.json
+++ b/php/src/composer.json
@@ -3,6 +3,7 @@
     "require": {
         "bramus/router": "~1.6",
         "doctrine/dbal": "~3.3.2",
-        "php-di/php-di": "7.0.0-beta3"
+        "php-di/php-di": "7.0.0-beta3",
+        "doctrine/annotations": "~1.13.2"
     }
 }
