--- a/php/src/composer.json
+++ b/php/src/composer.json
@@ -6,5 +6,10 @@
         "php-di/php-di": "7.0.0-beta3",
         "doctrine/annotations": "~1.13.2",
         "pusher/pusher-php-server": "^7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "JJS\\": ""
+        }
     }
 }
